// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Input (private) withImage - Empty image path 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 > label {
  padding: 0 8px 0 0;
}

<div
  className="c0"
>
  <input />
</div>
`;

exports[`Storyshots Select Input (private) withImage - Valid image path 1`] = `
.c2 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://picsum.photos/100);
  background-size: cover;
  background-position: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 > label {
  padding: 0 8px 0 0;
}

.c1 {
  margin-right: -7px;
  margin-left: 10px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    size={24}
    src="https://picsum.photos/100"
  />
  <input />
</div>
`;

exports[`Storyshots Select Input (private) withImage - With inputRef 1`] = `
.c2 {
  background-origin: border-box;
  background-repeat: no-repeat;
  box-sizing: border-box;
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  overflow: hidden;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 100%;
  background-image: url(https://picsum.photos/100);
  background-size: cover;
  background-position: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 > label {
  padding: 0 8px 0 0;
}

.c1 {
  margin-right: -7px;
  margin-left: 10px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    size={24}
    src="https://picsum.photos/100"
  />
  <input />
</div>
`;
